--- a/public/src/components/SettingSection/SettingSection.module.css
+++ b/public/src/components/SettingSection/SettingSection.module.css
@@ -13,7 +13,7 @@
   border: 0;
   border-radius: 6px;
   box-shadow: 0px 0px 40px 15px rgb(0 0 0 / 25%);
-  transition: all 0.1s ease-out;
+  transition: all 0.2s ease-out;
 }
 
 .settngs-show {
@@ -67,11 +67,23 @@
     bottom: 0px;
     gap: 8px;
     height: 220px;
+    transition: all 0.4s ease-out;
   }
   .title,
   .public-link,
   .theme,
   .real-time {
     padding: 10px 20px;
+  }
+
+  .settngs-show {
+    left: 0px;
+    bottom: 0px;
+  }
+
+  .settings-hide {
+    opacity: 0;
+    left: 0px;
+    bottom: -400px;
   }
 }
