--- a/public/src/index.css
+++ b/public/src/index.css
@@ -24,6 +24,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
+  background-color: #131314;
 }
 
 body::-webkit-scrollbar {
