--- a/public/src/components/Sidebar/Sidebar.module.css
+++ b/public/src/components/Sidebar/Sidebar.module.css
@@ -65,6 +65,19 @@
   padding: 8px;
 }
 
+.pluc-icon img {
+  position: absolute;
+  left: 9px;
+}
+
+.pluc-icon p {
+  padding-left: 35px;
+  -webkit-box-orient: vertical;
+  display: -webkit-inline-box;
+  overflow: hidden;
+  -webkit-line-clamp: 1;
+}
+
 .pluc-icon:hover {
   background-color: #2c2d30;
 }
@@ -90,6 +103,56 @@
   color: rgb(227, 227, 227);
 }
 
+.pluc-icon:hover::before,
+.menu-icon:hover::before {
+  position: absolute;
+  font-size: 12px;
+  font-weight: 400;
+  border: 0px;
+  border-radius: 5px;
+  color: white;
+  background-color: #3c4043;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pluc-icon:hover::before {
+  content: "New Chat";
+  width: 65px;
+  height: 30px;
+}
+
+.menu-icon:hover::before {
+  width: 90px;
+  height: 30px;
+}
+
+.side-bar-long .menu-icon:hover::before {
+  content: "Collapse menu";
+  left: 50px;
+}
+
+.side-bar-sort .menu-icon:hover::before {
+  content: "Expand menu";
+  bottom: 6px;
+  left: 60px;
+}
+
+.side-bar-long .pluc-icon:hover::before {
+  bottom: 6px;
+  left: 170px;
+}
+
+.side-bar-sort .pluc-icon:hover::before {
+  bottom: 6px;
+  left: 60px;
+}
+
+/* 
+resent chat section  */
+
 .recent-chat-section,
 .recent-chat-main {
   display: flex;
@@ -98,7 +161,7 @@
 }
 
 .recent-chat-section {
-  gap: 30px;
+  gap: 20px;
   overflow: hidden;
   padding-bottom: 5px;
   margin-top: 4rem;
@@ -111,7 +174,7 @@
 .recent-chat-main {
   height: calc(78vh - 235px);
   width: 90%;
-  gap: 6px;
+  gap: 2px;
   margin-top: 4rem;
   position: absolute;
   left: 18px;
@@ -247,6 +310,52 @@
 .settings {
   border: 0px;
   padding: 7px 0px;
+  position: relative;
+}
+
+.help:hover::before,
+.activity:hover::before,
+.settings:hover::before {
+  position: absolute;
+  top: -2px;
+  font-size: 12px;
+  color: white;
+  font-weight: 400;
+  z-index: 5;
+  background: #3c4043;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0px;
+  border-radius: 5px;
+}
+
+.side-bar-sort .help:hover::before,
+.side-bar-sort .activity:hover::before,
+.side-bar-sort .settings:hover::before {
+  left: 60px;
+}
+
+.side-bar-long .help:hover::before,
+.side-bar-long .activity:hover::before,
+.side-bar-long .settings:hover::before {
+  left: 260px;
+}
+
+.help:hover::before {
+  content: "Help";
+  width: 45px;
+}
+
+.activity:hover::before {
+  content: "Activity";
+  width: 55px;
+}
+
+.settings:hover::before {
+  content: "Settings";
+  width: 60px;
 }
 
 .side-bar-long .help,
@@ -379,6 +488,12 @@
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 1;
+  }
+
+  .help:hover::before,
+  .activity:hover::before,
+  .settings:hover::before {
+    display: none;
   }
 }
 
