--- a/public/src/components/Sidebar/Sidebar.module.css
+++ b/public/src/components/Sidebar/Sidebar.module.css
@@ -1,6 +1,6 @@
 .sidebar-main {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100dvh;
   background-color: var(--sidebar-bg-color);
   display: flex;
   flex-flow: column nowrap;
