--- a/public/src/App.css
+++ b/public/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   overflow: hidden;
   position: relative;
@@ -10,7 +10,7 @@
   position: absolute;
   background-color: var(--bg-focus-pc);
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   left: 0px;
   z-index: 5;
 }
