--- a/public/src/index.css
+++ b/public/src/index.css
@@ -141,6 +141,10 @@
   --bg-focus-mobile: rgba(0, 0, 0, 0.068);
 }
 
+html {
+  height: 100dvb;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -148,8 +152,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  min-height: 100vh;
+  min-height: 100dvh;
   background-color: #131314;
+  overflow-y: auto;
 }
 
 body::-webkit-scrollbar {
