--- a/public/src/index.css
+++ b/public/src/index.css
@@ -77,6 +77,8 @@
 
   --bg-focus-pc: rgba(0, 0, 0, 0.082);
   --bg-focus-mobile: rgba(0, 0, 0, 0.274);
+
+  --chat-font-color: #e3e3e3;
 }
 
 [data-theme="light"] {
@@ -139,6 +141,8 @@
 
   --bg-focus-pc: rgba(0, 0, 0, 0.062);
   --bg-focus-mobile: rgba(0, 0, 0, 0.068);
+
+  --chat-font-color: #1f1f1f;
 }
 
 html {
