--- a/public/src/components/Header/Header.module.css
+++ b/public/src/components/Header/Header.module.css
@@ -35,6 +35,7 @@
   background-color: var(--header-plus-bg);
   border: 0px;
   border-radius: 50%;
+  display: none;
 }
 
 .left-section img,
@@ -62,8 +63,6 @@
 }
 
 .user {
-  width: 35px;
-  height: 35px;
   border: none;
   border-radius: 50%;
   cursor: pointer;
@@ -78,6 +77,10 @@
 
 @media (max-width: 960px) {
   .menu-icon {
+    display: flex;
+  }
+
+  .plus-icon {
     display: flex;
   }
 }
