chat section text overflow and settings section height change

--- a/public/src/components/NewChat/ScrollChat/ScrollChat.module.css
+++ b/public/src/components/NewChat/ScrollChat/ScrollChat.module.css
@@ -32,6 +32,8 @@
   flex-flow: nowrap column;
   gap: 55px;
   margin: 20px auto;
+  overflow: hidden;
+  word-break: break-all;
 }
 
 .single-chat:last-child {
