get old chat conditon change to get by params and fixed some bugs

--- a/public/src/components/Sidebar/Sidebar.module.css
+++ b/public/src/components/Sidebar/Sidebar.module.css
@@ -192,6 +192,11 @@ resent chat section  */
   overflow: scroll;
 }
 
+.recent-chat-main a {
+  width: 100%;
+  text-decoration: none;
+}
+
 .recent-chat-main::-webkit-scrollbar {
   width: 0px;
 }
