--- a/public/src/components/NewChat/ScrollChat/ScrollChat.module.css
+++ b/public/src/components/NewChat/ScrollChat/ScrollChat.module.css
@@ -32,7 +32,7 @@
   flex-flow: nowrap column;
   gap: 55px;
   margin: 20px auto;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .single-chat:last-child {
@@ -53,6 +53,10 @@
   color: var(--chat-font-color);
   text-align: left;
   padding-left: 20px;
+}
+
+.gemini p p {
+  padding-left: 0px;
 }
 
 .user p {
