--- a/public/src/components/NewChat/ScrollChat/ScrollChatModule.css
+++ b/public/src/components/NewChat/ScrollChat/ScrollChatModule.css
@@ -111,6 +111,10 @@ code::-webkit-scrollbar-thumb:hover {
   color: var(--code-attr) !important;
 }
 
+pre code.hljs {
+  padding: 10px 15px !important;
+}
+
 @media (max-width: 930px) {
   pre {
     width: 98%;
