--- a/public/src/components/Sidebar/Sidebar.module.css
+++ b/public/src/components/Sidebar/Sidebar.module.css
@@ -184,21 +184,35 @@ resent chat section  */
 
 .recent-chat-main {
   height: calc(78vh - 235px);
-  width: 90%;
+  width: 92%;
   gap: 2px;
   margin-top: 4rem;
   position: absolute;
   left: 18px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .recent-chat-main a {
-  width: 100%;
+  width: 95%;
   text-decoration: none;
 }
 
 .recent-chat-main::-webkit-scrollbar {
-  width: 0px;
+  width: 6px;
+}
+
+.recent-chat-main::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.recent-chat-main::-webkit-scrollbar-thumb {
+  background-color: #80868b;
+  border-radius: 6px;
+}
+
+.recent-chat-main::-webkit-scrollbar-thumb:hover {
+  background-color: #60666a;
 }
 
 .recent-chat-main p {
@@ -227,7 +241,7 @@ resent chat section  */
 
 .show-more {
   padding: 8px 7px;
-  width: 100%;
+  width: 95%;
   border-radius: 24px;
 }
 
